# claudebot

./: .gitignore  CLAUDE.md  HEARTBEAT.md  LOCAL_MODELS_IDEAS.txt  README.md  START_HEARTBEAT.bat  START_VISION_SERVER.bat  SUPER_SKILLS_CLAUDE.txt  all_skills.txt  auth_hacker.py  auto_image_gener_v3.py  capture_pro.ps1  check_yesterday.py  chromatic_systems_philosophy.md  classify_downloads.py  claudebot_identity.py  cleanup_downloads.py  download_cat_playwright.py  download_cat_pro.py  entropy_image.py  episodic_memory_cli.py  evolution_report.md  evolve_self_model.py  force_heartbeat.py  gemini_bridge.py  gemini_native_control.py  google_fit_sync.py  heartbeat_engine.py  heartbeat_state.json  hello_claude.ahk  inspect_watch.py  inspect_watch_v2.py  knowledge_oracle.py  launch_chrome.ps1  list_groq_models.py  list_sources.py  live_heart_rate.py  logger_pro.py  memory_vault.py  move_mouse.py  (+34 more)
tools/worker-core/: .env.example  pyproject.toml
tools/worker-core/adapters/: browser_adapter.py  windows_adapter.py
tools/worker-core/app/: config.py  logger.py  main.py  memory.py  orchestrator.py  task_queue.py
tools/worker-core/playbooks/: 119b1fc4.json  208a8589.json  338b6fdf.json  350ad7d3.json  3c69d081.json  474c8a79.json  820d8eee.json  938e3b27.json  b1144280.json  bc9dfe64.json  c522a346.json  fb3405f3.json
tools/worker-core/scripts/: run_browser_task.py  run_windows_task.py  run_worker_task.py  start_edge_cdp.ps1
tools/worker-core/skills/: browser.py  data.py  files.py  windows.py
tools/worker-core/tasks/: demo.yaml  smoke_test.yaml  test_file_ops.yaml  (+1 more)
(+328 files in other folders)
